Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-11198

“lctl get_param“ doesn't return errno when reading fails

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.12.0
    • None
    • None
    • both 2.10 and master branch have the problem
    • 3
    • 9223372036854775807

      The problem (Or feature? I don't think it is a good feature though) is caused by a defect in param_display(). The return failure of read_param() is ignored.

       

      1. lctl get_param -n ost.OSS.ost_io.nrs_tbf_rule
        error: get_param: reading 'ost.OSS.ost_io.nrs_tbf_rule': No such device
        ]# echo $?
        0

            wshilong Wang Shilong (Inactive)
            lixi_wc Li Xi
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: