LU-11198 utils: propagate errors for read_param

Steps to reproduce:

 $ lctl get_param -n ost.OSS.ost_io.nrs_tbf_rule
 error: get_param: reading 'ost.OSS.ost_io.nrs_tbf_rule': No such device
 $ echo $?
 0

read_param() might return errors, fix to return errors to
caller.

Change-Id: Id165424342be3109669f173b9b72c16aa8c83425
Signed-off-by: Wang Shilong <wshilong@ddn.com>
Reviewed-on: https://review.whamcloud.com/32925
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: James Simmons <uja.ornl@yahoo.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>