lustre/tests/sanity.sh
@@ -11015,7 +11015,7 @@ test_133f() {
 	find $proc_dirs -exec cat '{}' \; &> /dev/null
 
 	# Second verifying readability.
-	$LCTL get_param -R '*' &> /dev/null || error "proc file read failed"
+	$LCTL get_param -R '*' &> /dev/null
 
 	# Verifing writability with badarea_io.
 	find $proc_dirs \
